--- a/assets/style.css
+++ b/assets/style.css
@@ -339,6 +339,11 @@ section .title::after{
     background-color: #000;    
 }
 
+h4 a{
+    color: #ffef0a;
+    text-decoration: none;
+}
+
 .services {
 	margin-top: 140px;
 }
